# workspace/04.1-ofb.consents/sboot-atom-ofb-resources/src/main/java/com/ofb/resources/service/ResourcesService.java
@@ -313,6 +313,7 @@ public class ResourcesService {
                     .accountStatus(reg.getAccountStatus())
                     .accountSubType(reg.getAccountSubType())
                     .accountType(reg.getAccountType())
+                    .accountCurrency(reg.getAccountCurrency())
                     .permissions(listPermissions)
                     .build();
 
