# workspace/04.1-ofb.consents/sboot-atom-ofb-resources/src/main/resources/openapi/server/openapi-resources-corporate.1.0.0.yaml
@@ -124,6 +124,7 @@ components:
           - accountBranchCode
           - accountNumber
           - accountCheckDigit
+          - accountCurrency
           - permissions
         properties:
           resourceId:
@@ -191,6 +192,11 @@ components:
             minLength: 1
             maxLength: 1
             example: "0"
+          accountCurrency:
+            type: string
+            minLength: 1
+            maxLength: 10
+            example: "BRL"
           permissions:
             $ref: "#/components/schemas/Permissions"
 
